# oxidize-postal

./: .gitignore  README.md  build.sh  data_manager.py  main.py  pyproject.toml  pytest.ini  requirements-test.txt  run_tests.py
oxidize-postal/: Cargo.toml  __init__.py  pyproject.toml
oxidize-postal/src/: __init__.py  lib.rs
oxidize-postal/src/postal/: __init__.py  constants.rs  error.rs  mod.rs  parser.rs  python_api.rs
tests/: conftest.py
tests/fixtures/: __init__.py  sample_addresses.py
tests/integration/: test_end_to_end.py
tests/unit/: __init__.py  test_address_expansion.py  test_address_normalization.py  test_address_parsing.py  test_data_management.py
