[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "oxidize-postal"
version = "0.1.1"
description = "High performance postal address parser and normalizer using libpostal"
requires-python = ">=3.9"
dependencies = []
authors = [
    {name = "Eric Aleman"}
]
license = {text = "MIT"}
keywords = ["address", "postal", "parsing", "normalization", "libpostal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: GIS",
]

[tool.maturin]
features = ["pyo3/extension-module"]
bindings = "pyo3"